--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,20 @@
     color: #2D3030;
 }
 
+p, ul{
+ font-size: 18px;
+}
+
 body {
     background-color: #D5B4A8;
 }
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: inherit;
     padding: 20px;
     margin-bottom: 10px;
     display: flex;
@@ -17,6 +26,48 @@ header {
     align-items: center;
 
     border-bottom: 2px solid #2D3030;
+}
+
+main {
+    padding-top: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+main > div {
+    margin: 0px 20px;
+    padding: 0px 10px;
+}
+
+main h3 {
+    margin-bottom: 20px;
+    border-bottom: 1px solid #2D3030;
+}
+
+main p {
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+main ul {
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+
+ul li {
+    margin-bottom: 10px;
+}
+
+pre {
+    margin-left: 15px;
+}
+.leftSide > div {
+    margin-bottom: 15px;
+}
+
+.rightSide {
+    white-space: nowrap;
 }
 
 .container {
@@ -31,6 +82,7 @@ header {
     object-fit: cover;
 
     border-radius: 50%;
+    transition: 0.2s;
 }
 
 .nameProf {
