--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
     font-family: sans-serif;
 }
 
-p, ul{
- font-size: 18px;
+p, ul {
+    font-size: 18px;
 }
 
 body {
@@ -25,8 +25,8 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
     border-bottom: 2px solid #2D3030;
+    background-color: ghostwhite;
 }
 
 main {
@@ -36,13 +36,14 @@ main {
     justify-content: space-between;
 }
 
-main > div {
+main>div {
     margin: 0px 20px;
     padding: 0px 10px;
 }
 
 main h3 {
     margin-bottom: 20px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #2D3030;
 }
 
@@ -63,12 +64,14 @@ ul li {
 pre {
     margin-left: 15px;
 }
-.leftSide > div {
-    margin-bottom: 15px;
+
+.leftSide>div {
+    margin-bottom: 25px;
 }
 
 .rightSide {
     white-space: nowrap;
+    margin-bottom: 25px;
 }
 
 .container {
@@ -81,7 +84,6 @@ pre {
     width: 250px;
     height: 250px;
     object-fit: cover;
-
     border-radius: 50%;
     transition: 0.2s;
 }
@@ -92,4 +94,35 @@ pre {
 
 h1 {
     margin-bottom: 15px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: ghostwhite;
+    border-top: 2px solid #2D3030;
+}
+
+footer>.firstRow {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+footer>.firstRow img {
+    height: 50px;
+    width: auto;
+    margin: 0px 30px;
+    margin-bottom: 30px;
+}
+
+footer > .secondRow {
+    padding-bottom: 20px;
+}
+
+@media screen and (max-width: 1200px) {
+    main {
+        flex-direction: column-reverse;
+    }
 }
