--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,13 @@
 * {
     padding: 0;
     margin: 0;
-    color: #2D3030;
+
     font-family: sans-serif;
+    color: #2D3030;
 }
 
-p, ul {
+p, 
+ul {
     font-size: 18px;
 }
 
@@ -17,33 +19,35 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    background-color: inherit;
-    padding: 20px;
-    margin-bottom: 10px;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 10px;
+
+    background-color: #f8f8ff;
     border-bottom: 2px solid #2D3030;
-    background-color: ghostwhite;
 }
 
 main {
-    padding-top: 300px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 300px;
 }
 
-main>div {
-    margin: 0px 20px;
-    padding: 0px 10px;
+main > div {
+    margin: 0 20px;
+    padding: 0 10px;
 }
 
 main h3 {
     margin-bottom: 20px;
     padding-bottom: 10px;
+
     border-bottom: 1px solid #2D3030;
 }
 
@@ -65,27 +69,31 @@ pre {
     margin-left: 15px;
 }
 
-.leftSide>div {
+.leftSide > div {
     margin-bottom: 25px;
 }
 
 .rightSide {
-    white-space: nowrap;
     margin-bottom: 25px;
+    white-space: nowrap;
 }
 
 .container {
     width: 80%;
     margin: auto;
-    background-color: ghostwhite;
+
+    background-color: #f8f8ff;
 }
 
 .photo {
     width: 250px;
     height: 250px;
-    object-fit: cover;
+    
     border-radius: 50%;
+
     transition: 0.2s;
+
+    object-fit: cover;
 }
 
 .nameProf {
@@ -100,24 +108,26 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: ghostwhite;
+
+    background-color: #f8f8ff;
+    
     border-top: 2px solid #2D3030;
 }
 
-footer>.firstRow {
+footer > .firstRow {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
 }
 
-footer>.firstRow img {
+footer > .firstRow img {
     height: 50px;
     width: auto;
-    margin: 0px 30px;
+    margin: 0 30px;
     margin-bottom: 30px;
 }
 
-footer>.secondRow {
+footer > .secondRow {
     padding-bottom: 20px;
 }
 
